<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id = "@+id/snackbar_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/team_a"
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@+id/pointA"
        app:layout_constraintEnd_toStartOf="@+id/background_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/team_a_points"
        android:textColor="#000000"
        android:textSize="56sp"
        app:layout_constraintBottom_toTopOf="@+id/threepointA"
        app:layout_constraintEnd_toStartOf="@+id/background_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamA" />

    <TextView
        android:id="@+id/teamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/team_b"
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@+id/pointB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/background_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/team_b_points"
        android:textColor="#000000"
        android:textSize="56sp"
        app:layout_constraintBottom_toTopOf="@+id/threepointsB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/background_line"
        app:layout_constraintTop_toBottomOf="@+id/teamB" />

    <Button
        android:id="@+id/threepointA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/orange_yellow"
        android:text="@string/three_points_a"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/twopointA"
        app:layout_constraintEnd_toStartOf="@+id/background_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointA" />

    <Button
        android:id="@+id/twopointA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/orange_yellow"
        android:text="@string/two_point_a"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/freethrowA"
        app:layout_constraintEnd_toStartOf="@+id/background_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threepointA" />

    <Button
        android:id="@+id/freethrowA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/orange_yellow"
        android:text="@string/free_throw_a"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/background_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twopointA" />

    <Button
        android:id="@+id/threepointsB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/orange_yellow"
        android:text="@string/three_points_b"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/twopointsB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/background_line"
        app:layout_constraintTop_toBottomOf="@+id/pointB" />

    <Button
        android:id="@+id/twopointsB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/orange_yellow"
        android:text="@string/two_points_b"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/freethrowB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/background_line"
        app:layout_constraintTop_toBottomOf="@+id/threepointsB" />

    <Button
        android:id="@+id/freethrowB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/orange_yellow"
        android:text="@string/free_throw_b"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/background_line"
        app:layout_constraintTop_toBottomOf="@+id/twopointsB" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/orange_yellow"
        android:text="@string/reset_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/background_line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>